section-8-Services-and-Networking/service.yaml
#SERVICE-ONE
apiVersion: v1
kind: Service
metadata:
  name: one
spec:
  type: NodePort
  selector:
    app: nginx-1
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30001

#SERVICE-TWO
apiVersion: v1
kind: Service
metadata:
  name: two
spec:
  type: NodePort
  selector:
    app: nginx-2
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30002

#SERVICE-THREE
apiVersion: v1
kind: Service
metadata:
  name: three
spec:
  type: NodePort
  selector:
    app: nginx-3
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30003
